[package]
name = "p2p_handshake"
version = "0.1.0"
edition = "2021"
authors = ["Michal Režňák"]

[dependencies]
aes = "0.8.2"
anyhow = "1.0.66"
bytes = "1.3.0"
clap = { version = "4.0.29", features = ["derive"] }
ctr = "0.9.2"
#ecdsa = { version = "0.14.8", features = ["der"] } TODO
ecies = { version = "0.2", default-features = false, features = ["pure"] }
env_logger = "0.10.0"
fehler = "1.0.0"
hex = "0.4.3"
k256 = { version = "0.11.6", features = ["ecdsa", "keccak256"] }
lazy_static = "1.4.0"
log = "0.4.17"
rand = "0.8.5"
rlp = { version = "0.5.2", features = ["rlp-derive"] }
rlp-derive = "0.1.0"
secp256k1 = { version = "0.24.1", features = ["recovery", "rand-std", "bitcoin_hashes"] }
serde = "1.0.150"
serde_json = "1.0.89"
sha3 = "0.10.6"
snafu = "0.7.3"
tokio = { version = "1.22.0", features = ["full"] }
typed-builder = "0.11.0"
web3-hash-utils = "1.0.0"
